Fix IdM nav toggle link color in dark mode

--- a/wdn/templates_5.3/scss/components/_components.nav-toggle.scss
+++ b/wdn/templates_5.3/scss/components/_components.nav-toggle.scss
@@ -8,6 +8,16 @@
 }
 
 
+@media (prefers-color-scheme: dark) {
+
+  .dcf-idm-status-logged-out a,
+  .dcf-idm-status-logged-out a:visited {
+    color: #fefdfa;
+  }
+
+}
+
+
 @include mq(md, max, width) {
 
   .unl .dcf-nav-toggle-group {
